# charon-tree-sitter

./: .editorconfig  .gitlab-ci.yml  .prettierrc  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-charon.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_charon/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCharon/: charon.h
bindings/swift/TreeSitterCharonTests/: TreeSitterCharonTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
